# KasiPay-LND

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.cursor/: rules.mdc
.cursor/plans/: lightning_payday_mvp_architecture_d4fc85c0.plan.md  lnd_integration_architecture_fa0bada5.plan.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  jobs.py  lnd.py  tasks.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/lnd/: __init__.py  invoice_decoder.py  lnd_client.py
backend/app/models/: __init__.py  base.py  job.py  job_event.py  operator.py  payout.py  task.py  user.py
backend/app/services/: __init__.py  approval_service.py  job_service.py  task_service.py  user_service.py
docker/: mongo-init.js
docs/: POLAR_SETUP.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx  PinInput.tsx
frontend/src/pages/: Earnings.tsx  Login.tsx  MyTasks.tsx  Register.tsx  Settings.tsx  TaskDetail.tsx  Tasks.tsx  Verify.tsx  VerifyDetail.tsx  VerifyHistory.tsx
frontend/src/pages/admin/: AdminTasks.tsx  AdminTreasury.tsx  AdminUsers.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
